# shadowseed-agent-lab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
agents/: shadowseed-agent-lab-reviewer.md
docs/: agent-lab-roadmap.md  golden-path.md  pr-safety-checklist.md  visual-explainer.html
docs/architecture-decisions/: 0001-agent-lab-boundary.md  0002-rag-as-evidence-not-influence.md  README.md
examples/: __init__.py
examples/agent_lab/: README.md  __init__.py  multi_domain_absence_demo.py
examples/agent_lab/fixtures/: education_note.md  evidence_corpus.json  incident_review.md  policy_note.md  product_requirements.md  project_plan.md  research_critique.md
shadowseed_agent_lab/: __init__.py  __main__.py  audit_replay.py  cli.py  evidence_adapter.py  harness.py  session_runner.py
skills/shadowseed-agent-lab/: SKILL.md
skills/shadowseed-agent-lab/agents/: openai.yaml
skills/shadowseed-agent-lab/references/: review-checklist.md  upstream-contract.md
tests/: test_audit_replay.py  test_audit_replay_seed_identity.py  test_cli.py  test_evidence_adapter.py  test_harness_loop.py  test_multi_domain_absence_demo.py  test_session_runner.py  test_session_runner_guard.py  test_session_runner_policy.py  test_upstream_integration.py
